2.0.2
	+ Packaging fixes and natty support
2.0.1
	+ PPPOE MTU is now changed in network module when reconfiguring gateways
1.5.6
	+ Zentyal rebrand
1.5.5
	+ Use modelClasses API for firewall rule tables
	+ Increased size of description fields for rules
1.5.4
	+ Set iptables rule properly to fix PPPoE problems with some websites
1.5.3
	+ Bridged mode support
1.5.2
	+ New logging feature for port forwarding rules
	+ Only allow safe ICMP types everywhere
1.5.1
	+ New firewall table containing rules added by eBox services
	+ Bug fix: port forwarding now works with PPPoE
	+ Bug fix: openVPN interfaces are added as internal interfaces to
	  iexternal and iexternalmodules (Closes #1758)
	+ Bug fix: allow only safe ICMP types and insert the rules after user rules
	  so these override the default ones. Drop INVALID packets first
	  too
	+ Added TCP/53 to DNS rules in fdns and ointernal chains
	+ Inverse match is not longer allowed for service 'any'
1.4.2
	+ Add a config option to disable the logging of dropped packets in firewall
1.4
	+ Bug fix: i18n
1.3.14
	+ Added multi-gateway support for DHCP and PPPoE
	+ Add an allow rule by default from internal
	  networks to internet
1.3.11
	+ Added report support
	+ Add description field for redirects
	+ Breadcrumbs
	+ Change Redirections for Port Forwarding
1.3.6
	+ Add clone() to EBox::Firewall::IptablesRule
1.3.4
	+ bugfix: inospoof chain was buggy and didn't allow traffic
	  to internal eBox addresses from other internal networks
	+ bugfix: insert missing port data using NULL in logs data base
1.1.30
	+ Add all and ah protocols to redirections
1.1.20
	+ New release
1.1.10
	+ New release
1.1
	+ Added required output rules to connect remote services when the
	eBox is subscribed
	+ Use the new ids() and row() API
	+ Added support to redirects to introduce the origin destination address.
	  So far, only local address could be used.
	+ Bugfix: fix regression that didn't allow to use virtual interfaces on
	redirections