@@ -1,3 +1,5 @@
+HEAD
+	+ Fixed bug when getting the value of destination port in redirect table
 2.0.2
 	+ Packaging fixes and natty support
 2.0.1
